--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
         >
           Sign in to your account
         </h1>
-        <form class="space-y-4 md:space-y-6" action="#">
+        <form class="space-y-4 md:space-y-6" (ngSubmit)="onSubmit()">
           <div>
             <label
               for="email"
@@ -23,8 +23,9 @@
               name="email"
               id="email"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="name@company.com"
-              required=""
+              placeholder="Enter Email"
+              [(ngModel)]="email"
+              required
             />
           </div>
           <div>
@@ -37,9 +38,10 @@
               type="password"
               name="password"
               id="password"
-              placeholder="••••••••"
+              placeholder="Enter Password"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              required=""
+              [(ngModel)]="password"
+              required
             />
           </div>
           <div class="flex items-center justify-between">
