commit header, sidenav, mat-table, icon, frontend, and responsive

--- a/src/app/teacher-leaderboard/teacher-leaderboard.component.html
+++ b/src/app/teacher-leaderboard/teacher-leaderboard.component.html
@@ -2,7 +2,10 @@
   <div>
     <app-sidenav></app-sidenav>
   </div>
-  <div class="static ml-64 p-20">
+  <div class="static ml-0 sm:ml-64">
+    <app-header></app-header>
+  </div>
+  <div class="static ml-0 sm:ml-64 p-0 sm:p-20">
     <mat-form-field>
       <mat-label>Filter</mat-label>
       <input
@@ -12,55 +15,62 @@
         #input
       />
     </mat-form-field>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <!-- Position Column -->
-      <ng-container matColumnDef="id_number">
-        <th mat-header-cell *matHeaderCellDef>ID No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.id_number }}</td>
-      </ng-container>
+    <div class="overflow-x-scroll">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <!-- Position Column -->
+        <ng-container matColumnDef="id_number">
+          <th mat-header-cell *matHeaderCellDef>ID No.</th>
+          <td mat-cell *matCellDef="let element">{{ element.id_number }}</td>
+        </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="first_name">
-        <th mat-header-cell *matHeaderCellDef>Firstname</th>
-        <td mat-cell *matCellDef="let element">{{ element.first_name }}</td>
-      </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="first_name">
+          <th mat-header-cell *matHeaderCellDef>Firstname</th>
+          <td mat-cell *matCellDef="let element">{{ element.first_name }}</td>
+        </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="last_name">
-        <th mat-header-cell *matHeaderCellDef>Lastname</th>
-        <td mat-cell *matCellDef="let element">{{ element.last_name }}</td>
-      </ng-container>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="last_name">
+          <th mat-header-cell *matHeaderCellDef>Lastname</th>
+          <td mat-cell *matCellDef="let element">{{ element.last_name }}</td>
+        </ng-container>
 
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-      </ng-container>
+        <ng-container matColumnDef="section">
+          <th mat-header-cell *matHeaderCellDef>Section</th>
+          <td mat-cell *matCellDef="let element">{{ element.section }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="section">
-        <th mat-header-cell *matHeaderCellDef>Section</th>
-        <td mat-cell *matCellDef="let element">{{ element.section }}</td>
-      </ng-container>
+        <ng-container matColumnDef="chapter_finish">
+          <th mat-header-cell *matHeaderCellDef>Game Chapter Finish</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.chapter_finish }}
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="chapter_finish">
-        <th mat-header-cell *matHeaderCellDef>Game Chapter Finish</th>
-        <td mat-cell *matCellDef="let element">{{ element.chapter_finish }}</td>
-      </ng-container>
+        <ng-container matColumnDef="total_score">
+          <th mat-header-cell *matHeaderCellDef>Total Score</th>
+          <td mat-cell *matCellDef="let element">{{ element.total_score }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="total_score">
-        <th mat-header-cell *matHeaderCellDef>Total Score</th>
-        <td mat-cell *matCellDef="let element">{{ element.total_score }}</td>
-      </ng-container>
+        <ng-container matColumnDef="remarks">
+          <th mat-header-cell *matHeaderCellDef>Remarks</th>
+          <td mat-cell *matCellDef="let element">
+            <ng-container *ngIf="element.total_score > 100">
+              <p>good</p>
+            </ng-container>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">
-          No data matching the filter "{{ input.value }}"
-        </td>
-      </tr>
-    </table>
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">
+            No data matching the filter "{{ input.value }}"
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
