--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -1,29 +1,18 @@
 <header>
   <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
-    <div
-      class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl"
-    >
-      <a href="https://flowbite.com" class="flex items-center">
-        <img
-          src="https://flowbite.com/docs/images/logo.svg"
-          class="mr-3 h-6 sm:h-9"
-          alt="Flowbite Logo"
-        />
-        <span
-          class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
-          >Flowbite</span
-        >
-      </a>
+    <div class="flex flex-wrap justify-between items-center max-w-screen-3xl">
+      <span
+        class="self-center text-sm sm:text-xl font-semibold whitespace-nowrap dark:text-white"
+        >MythTivated Admin
+      </span>
+      <span class="text-sm sm:text-xl font-semibold text-white self-center">
+        {{ headerName }}
+      </span>
       <div class="flex items-center lg:order-2">
         <a
           href="#"
-          class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800"
-          >Log in</a
-        >
-        <a
-          href="#"
-          class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800"
-          >Get started</a
+          class="hidden lg:inline-flex text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800"
+          >Log Out</a
         >
         <button
           data-collapse-toggle="mobile-menu-2"
@@ -31,20 +20,10 @@
           class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
           aria-controls="mobile-menu-2"
           aria-expanded="false"
+          (click)="toggleMenu()"
         >
           <span class="sr-only">Open main menu</span>
-          <svg
-            class="w-6 h-6"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
+          <mat-icon>menu</mat-icon>
           <svg
             class="hidden w-6 h-6"
             fill="currentColor"
@@ -60,8 +39,9 @@
         </button>
       </div>
       <div
-        class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1"
+        class=" hidden justify-between items-center w-full"
         id="mobile-menu-2"
+        [class.hidden]="!isMenuVisible"
       >
         <ul
           class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0"
@@ -114,3 +94,24 @@
     </div>
   </nav>
 </header>
+
+<!-- <header>
+  <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
+    <div class="flex flex-wrap justify-between items-center max-w-screen-3xl">
+      <span
+        class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
+        >MythTivated Admin
+      </span>
+      <span class="text-xl font-semibold text-white self-center">
+        {{ headerName }}
+      </span>
+      <div class="flex items-center lg:order-2">
+        <a
+          href="#"
+          class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800"
+          >Log Out</a
+        >
+      </div>
+    </div>
+  </nav>
+</header> -->
