--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -11,6 +11,7 @@
       <div class="flex items-center lg:order-2">
         <a
           href="#"
+          (click)="logoutFunction()"
           class="hidden lg:inline-flex text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800"
           >Log Out</a
         >
