Commit Analytics for head dashboard Done and table for head leadboard done with filtering

--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="flex flex-wrap justify-between items-center max-w-screen-3xl">
       <span
         class="self-center text-sm sm:text-xl font-semibold whitespace-nowrap dark:text-white"
-        >MythTivated Admin
+        >MythTivated
       </span>
       <span class="text-sm sm:text-xl font-semibold text-white self-center">
         {{ headerName }}
@@ -40,7 +40,7 @@
         </button>
       </div>
       <div
-        class=" hidden justify-between items-center w-full"
+        class="hidden justify-between items-center w-full"
         id="mobile-menu-2"
         [class.hidden]="!isMenuVisible"
       >
