--- a/src/app/shared/component/sidenav/sidenav.component.html
+++ b/src/app/shared/component/sidenav/sidenav.component.html
@@ -9,6 +9,7 @@
     <ul class="space-y-2">
       <li>
         <a
+          id="dashboardLink"
           href="#"
           class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
         >
@@ -18,6 +19,7 @@
       </li>
       <li>
         <a
+          id="leaderboardLink"
           href="#"
           class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
         >
@@ -25,24 +27,7 @@
           <span class="ml-3">Leaderboard</span>
         </a>
       </li>
-      <li>
-        <a
-          href="#"
-          class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
-        >
-          <mat-icon>pie_chart</mat-icon>
-          <span class="ml-3">Dashboard</span>
-        </a>
-      </li>
-      <li>
-        <a
-          href="#"
-          class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
-        >
-          <mat-icon>pie_chart</mat-icon>
-          <span class="ml-3">Dashboard</span>
-        </a>
-      </li>
+      
     </ul>
   </div>
 </aside>
