--- a/src/app/head-dashboard/head-dashboard.component.html
+++ b/src/app/head-dashboard/head-dashboard.component.html
@@ -6,8 +6,20 @@
     <app-header></app-header>
   </div>
   <div class="static ml-0 sm:ml-64 p-0 sm:p-20">
+    <div class="header-analytics flex justify-evenly">
+      <div>
+        <p class="text-4xl text-gray-200">
+          Students <br /><span class="text-3xl text-gray-400">40</span>
+        </p>
+      </div>
+      <div>
+        <p class="text-4xl text-gray-200">
+          Best Player <br /><span class="text-3xl text-gray-400">Juan</span>
+        </p>
+      </div>
+      <app-most-players-section></app-most-players-section>
+    </div>
     <app-all-students-high-score></app-all-students-high-score>
-    <app-most-players-section></app-most-players-section>
     <app-most-coin-collected></app-most-coin-collected>
   </div>
 </div>
