commit ko lang baka mamatay loptop

--- a/src/app/head-dashboard/head-dashboard.component.html
+++ b/src/app/head-dashboard/head-dashboard.component.html
@@ -9,12 +9,12 @@
     <div class="header-analytics flex justify-evenly">
       <div>
         <p class="text-4xl text-gray-200">
-          Students <br /><span class="text-3xl text-gray-400">40</span>
+          Students <br /><span class="text-3xl text-gray-400">{{ totalStudents }}</span>
         </p>
       </div>
       <div>
         <p class="text-4xl text-gray-200">
-          Best Player <br /><span class="text-3xl text-gray-400">Juan</span>
+          Best Player <br /><span class="text-3xl text-gray-400">{{ bestPlayerName }}</span>
         </p>
       </div>
       <app-most-players-section></app-most-players-section>
