--- a/src/app/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/teacher-dashboard/teacher-dashboard.component.html
@@ -1,12 +1,12 @@
 <div>
-    <div>
-      <app-sidenav></app-sidenav>
-    </div>
-    <div class="static ml-0 sm:ml-64">
-      <app-header></app-header>
-    </div>
-    <div class="static ml-0 sm:ml-64 p-0 sm:p-20">
-          hello world
-    </div>
+  <div>
+    <app-sidenav></app-sidenav>
   </div>
-  
+  <div class="static ml-0 sm:ml-64">
+    <app-header></app-header>
+  </div>
+  <div class="static ml-0 sm:ml-64 p-0 sm:p-20">
+    <app-col></app-col>
+    <app-row></app-row>
+  </div>
+</div>
