--- a/src/app/head-leaderboard/head-leaderboard.component.html
+++ b/src/app/head-leaderboard/head-leaderboard.component.html
@@ -6,27 +6,69 @@
     <app-header></app-header>
   </div>
   <div class="static ml-0 sm:ml-64 p-0 sm:p-20">
-    <mat-form-field>
-      <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Ex. ium"
-        #input
-      />
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Sections</mat-label>
-      <mat-select (valueChange)="applySelectFilter($event)">
-        <mat-option [value]="null">Clear</mat-option>
-        <mat-option
-          *ngFor="let data of studentSections"
-          [value]="data.sections"
-        >
-          {{ data.sections }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+    <p class="pb-10 text-center text-4xl font-semibold">Teachers List</p>
+    <div class="overflow-x-scroll">
+      <table mat-table [dataSource]="dataSource2" class="mat-elevation-z8">
+        <!-- Position Column -->
+        <ng-container matColumnDef="id_number">
+          <th mat-header-cell *matHeaderCellDef>ID No.</th>
+          <td mat-cell *matCellDef="let element">{{ element.id_number }}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="first_name">
+          <th mat-header-cell *matHeaderCellDef>Firstname</th>
+          <td mat-cell *matCellDef="let element">{{ element.first_name }}</td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="last_name">
+          <th mat-header-cell *matHeaderCellDef>Lastname</th>
+          <td mat-cell *matCellDef="let element">{{ element.last_name }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="section">
+          <th mat-header-cell *matHeaderCellDef>Section</th>
+          <td mat-cell *matCellDef="let element">{{ element.section }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns2"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">
+            No data matching the filter "{{ input.value }}"
+          </td>
+        </tr>
+      </table>
+    </div>
+    <p class="pt-10 text-center text-4xl font-semibold">Students Leaderboard</p>
+
+    <div class="mt-12">
+      <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input
+          matInput
+          (keyup)="applyFilter($event)"
+          placeholder="Ex. ium"
+          #input
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Sections</mat-label>
+        <mat-select (valueChange)="applySelectFilter($event)">
+          <mat-option [value]="null">Clear</mat-option>
+          <mat-option
+            *ngFor="let data of studentSections"
+            [value]="data.sections"
+          >
+            {{ data.sections }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
     <div class="overflow-x-scroll">
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <!-- Position Column -->
